--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
+    <link rel="shortcut icon" type="image/x-icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}" >
+
     <title>{{ site.title | default: site.github.repository_name }}</title>
   </head>
 
@@ -37,8 +39,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
 
-                <li><a href="/">Home</a></li>
-                <li><a href="/attendees/">Participants</a></li>
+                <li><a href="{{ site.baseurl }}/">Home</a></li>
+                <li><a href="{{ site.baseurl }}/attendees/">Participants</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
