Fix participants link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
             <ul class="nav navbar-nav">
 
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/attendees/">Participants</a></li>
+                <li><a href="{{ site.baseurl }}/participants">Participants</a></li>
 
             </ul>
         </div><!--/.nav-collapse -->
