--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,28 @@
 
 @import "{{ site.theme }}";
 
+// Breakpoints
+$large-breakpoint: 64em;
+$medium-breakpoint: 42em;
+
+@mixin large {
+  @media screen and (min-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
+
+@mixin medium {
+  @media screen and (min-width: #{$medium-breakpoint}) and (max-width: #{$large-breakpoint}) {
+    @content;
+  }
+}
+
+@mixin small {
+  @media screen and (max-width: #{$medium-breakpoint}) {
+    @content;
+  }
+}
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
