Add link to schedule to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 
           <a href="{{ site.baseurl }}/" class="btn">Home</a>
           <a href="{{ site.baseurl }}/participants" class="btn">Participants</a>
+          <a href="{{ site.baseurl }}/content" class="btn">Schedule & Topics</a>
 
           {% if site.show_downloads %}
             <section id="downloads">
