--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <a href="{{ site.baseurl }}/" class="btn">Home</a>
           <a href="{{ site.baseurl }}/participants" class="btn">Participants</a>
           <a href="{{ site.baseurl }}/content" class="btn">Schedule & Topics</a>
+          <a href="{{ site.baseurl }}/materials" class="btn">Workshop Materials</a>
 
           {% if site.show_downloads %}
             <section id="downloads">
