trying to condense navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <a href="{{ site.baseurl }}/" class="btn">Home</a>
           <a href="{{ site.baseurl }}/participants" class="btn">Participants</a>
-          <a href="{{ site.baseurl }}/content" class="btn">Schedule & Topics</a>
+          <a href="{{ site.baseurl }}/content" class="btn">Schedule</a>
           <a href="{{ site.baseurl }}/materials" class="btn">Materials</a>
           <a href="{{ site.baseurl }}/code-of-conduct" class="btn">Code of Conduct</a>
 
